--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@xkeshi/vue-qrcode": "^0.3.0",
+    "fastclick": "^1.0.6",
     "qrcode.vue": "^1.5.1",
     "v-qrcode": "^1.0.3",
     "vue": "^2.4.2",
